--- a/templates/bobjoying/main.html
+++ b/templates/bobjoying/main.html
@@ -83,6 +83,20 @@
             margin-top: 10px;
         }
 
+        .img_update_space {
+            display: flex;
+            outline: none;
+            outline-offset: -10px;
+            width: 778px;
+            height: 540px;
+            justify-content: center;
+            align-items: center;
+            margin-top: 10px;
+            background-size: 100%;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+
         .feed_txt {
             font-size: 14px;
         }
@@ -91,7 +105,6 @@
             font-size: 16px;
             font-weight: bold;
         }
-
     </style>
 </head>
 
@@ -131,7 +144,8 @@
             <!-- feed box -->
             {% for feed in feed_list %}
             <div class="border feed_box">
-                <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; margin: 0 10px;">
+                <div
+                    style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; margin: 0 10px;">
                     <div style="display: flex; flex-direction: row; align-items: center;">
                         <div class="box" style="background: #BDBDBD; width: 45px; height: 45px;">
                             <img class="profile" src="{% get_media_prefix %}{{ feed.profile_image }}">
@@ -148,8 +162,7 @@
 
                         <ul class="dropdown-menu" aria-labelledby="dropdownFeed">
                             <li>
-                                <div type="button" feed_id="{{ feed.id }}" class="update_feed"
-                                    style="font-weight: bold">수정</div>
+                                <div type="button" image="{{ feed.image }}" content="{{ feed.content }}" class="open_update_modal" style="font-weight: bold">수정</div>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
@@ -199,6 +212,32 @@
                     <div type="button" feed_id="{{ feed.id }}" class="upload_reply"
                         style="width: 50px;color: cornflowerblue; font-weight: bold">
                         게시
+                    </div>
+                </div>
+            </div>
+            <!-- modal for update feed -->
+            <div id="update_modal" class="modal_overlay">
+                <div class="modal_window">
+                    <div style="display: flex; flex-direction: row; justify-content: space-between;">
+                        <div style="width: 25px;">
+                            <span type="button" id="close_update_modal" class="material-icons-outlined">close</span>
+                        </div>
+                        <div>
+                            게시글을 수정
+                        </div>
+                        <div style="width: 25px;">
+                            <span type="button" id="done_update_feed" feed_id="{{ feed.id }}"
+                                feed_image="{{ feed.image }}" class="material-icons-outlined">done_outline</span>
+                        </div>
+                    </div>
+                    <div style="display: flex; flex-direction: row; border-top: solid 1px gray;">
+                        <div class="img_update_space" style="width: 500px;">
+                        </div>
+                        <div style="border-left: solid 1px gray;">
+                            <textarea id="{{ feed.id }}_update_feed_content" class="form-control"
+                                id="exampleFormControlTextarea1" rows="5"
+                                style="width: 278px; height: 540px;">{{ feed.content }}</textarea>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -367,6 +406,38 @@
             });
         });
 
+        $(".open_update_modal").click(function (event) {
+            let feed_image = event.target.attributes.getNamedItem('image').value;
+            let feed_content = event.target.attributes.getNamedItem('content').value;
+            $('#update_modal').css({
+                display: 'flex',
+            });
+
+            $('.img_update_space').css({
+                'background-image': 'url({% get_media_prefix %}' + feed_image + ')'
+            });
+
+            $(document.body).css({
+                overflow: 'hidden',
+            });
+        });
+
+        $('#close_update_modal').click(function () {
+            $('#update_modal').css({
+                display: 'none',
+            });
+
+            $(document.body).css({
+                overflow: 'visible',
+            });
+
+            $('.img_update_space').css({
+                'background-image': 'none',
+            });
+            
+            location.replace('/main');
+        });
+
         $('#upload_feed').click(function () {
             alert('제출 성공!')
 
@@ -464,6 +535,114 @@
                 return;
             }
         }
+
+        $('.img_update_space')
+            .on('dragover', dragOver)
+            .on('dragleave', dragOver)
+            .on('drop', updateFiles);
+
+        function updateFiles(e) {
+            e.stopPropagation();
+            e.preventDefault();
+            dragOver(e);
+            e.dataTransfer = e.originalEvent.dataTransfer;
+            files = e.dataTransfer.files;
+
+            if (files.length > 1) {
+                alert('하나의 이미지만 업로드 할 수 있습니다.')
+                return;
+            }
+
+            if (files[0].type.match(/image.*/)) {
+                $('.img_update_space').css({
+                    'background-image': 'url(' + window.URL.createObjectURL(files[0]) + ')',
+                    'outline': 'none',
+                    'background-size': '100%',
+                    'background-repeat': 'no-repeat',
+                    'background-position': 'center',
+                });
+                return True;
+            } else {
+                alert('이미지가 아닙니다.')
+                return;
+            }
+        }
+
+        $('#done_update_feed').click(function () {
+            let feed_id = event.target.attributes.getNamedItem('feed_id').value;
+            alert('수정 성공!')
+
+            $('#update_modal').css({
+                display: 'none',
+            });
+
+            $(document.body).css({
+                overflow: 'visible',
+            });
+
+            let feed_content_id = feed_id + '_update_feed_content';
+            let content = $('#' + feed_content_id).val();
+
+            let fd = new FormData();
+
+            if (files) {
+                let file = files[0];
+                let image = files[0].name;
+                fd.append('file', file);
+                fd.append('image', image);
+            } else {
+                fd.append('file', '');
+                fd.append('image', '');
+            }
+
+            fd.append('feed_id', feed_id)
+            fd.append('content', content);
+
+            $.ajax({
+                url: '/content/update',
+                data: fd,
+                method: 'POST',
+                processData: false,
+                contentType: false,
+                success: function (data) {
+                    console.log('업데이트 성공');
+                },
+                error: function (request, status, error) {
+                    console.log('업데이트 실패');
+                },
+                complete: function () {
+                    console.log('업데이트 완료');
+                    location.replace('/main');
+                }
+            });
+        });
+
+
+        $(".delete_feed").click(function (event) {
+            let feed_id = event.target.attributes.getNamedItem('feed_id').value;
+
+            $.ajax({
+                url: "/content/delete",
+                data: {
+                    feed_id: feed_id,
+                },
+                method: "POST",
+                success: function (data) {
+                    console.log("성공");
+                    alert("삭제 성공");
+                    { location.replace('/main'); }
+
+                },
+                error: function (request, status, error) {
+                    console.log("삭제 에러");
+                },
+                complete: function () {
+                    console.log("삭제 완료");
+                    $('#' + feed_id).val('');
+                }
+            });
+
+        });
 
     </script>
 
